--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 
 /*--Content--*/
 
-/*--work--*/
+/*--work__-*/
 
 /*--Comand--*/
 
@@ -33,7 +33,7 @@
 
 
     
-/*---portfolio--*/
+/*---portfolio__-*/
 
 
 
