--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ body {
   padding: 40px;
 }
 
-.modal-close {
+.modal__close {
   position: absolute;
   right: 8px;
   top: 8px;
@@ -89,12 +89,11 @@ body {
   justify-content: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close:hover {
+.modal__close:hover {
   fill: var(--acent-color--);
 }
 
-.modal-title {
+.modal__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -104,7 +103,7 @@ body {
   margin-bottom: 12px;
 }
 
-.modal-lable {
+.modal__lable {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.1666666667;
@@ -114,11 +113,11 @@ body {
   margin-bottom: 4px;
 }
 
-.modal-field {
+.modal__field {
   margin-bottom: 10px;
 }
 
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -128,28 +127,26 @@ body {
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-input:focus {
+.modal__input:focus {
   border-color: var(--acent-color--);
 }
 
-.modal-input:focus + .icon-input {
-  fill: var(--acent-color--);
-}
-
-.input-wrap {
+.modal__input-wrap {
   position: relative;
 }
 
-.icon-input {
+.modal__icon-input {
   position: absolute;
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal__input:focus + .modal__icon-input {
+  fill: var(--acent-color--);
+}
 
-.modal-text {
+.modal__text {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -160,12 +157,10 @@ body {
   outline: transparent;
   display: block;
 }
-
-.modal-text:focus {
+.modal__text:focus {
   border-color: var(--acent-color--);
 }
-
-.modal-text::placeholder {
+.modal__text::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
@@ -173,7 +168,7 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.chek-lable {
+.modal__chek-lable {
   display: flex;
   align-items: center;
   font-weight: 400;
@@ -183,8 +178,7 @@ body {
   color: #757575;
   justify-content: center;
 }
-
-.chek-lable span {
+.modal__chek-lable span {
   width: 16px;
   height: 15px;
   border: 2px solid rgb(33, 33, 33);
@@ -194,8 +188,12 @@ body {
   align-items: center;
   justify-content: center;
 }
+.modal__chek:checked + .modal__chek-lable span {
+  background-color: var(--acent-color--);
+  border: none;
+}
 
-.link-chek {
+.modal__chek-link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7142857143;
@@ -204,28 +202,22 @@ body {
   color: #2196F3;
 }
 
-.modal-coment {
+.modal__coment {
   margin-bottom: 20px;
 }
 
-.icon-che {
+.modal__icon-chek {
   fill: transparent;
 }
-
-.modal-policy {
-  margin-bottom: 30px;
-}
-
-.modal-chek:checked + .chek-lable span {
-  background-color: var(--acent-color--);
-  border: none;
-}
-
-.modal-chek:checked + .chek-lable .icon-che {
+.modal__chek:checked + .modal__chek-lable .modal__icon-chek {
   fill: #ffffff;
 }
 
-.modal-btn {
+.modal__policy {
+  margin-bottom: 30px;
+}
+
+.modal__btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -262,7 +254,7 @@ body {
   margin: -1px;
 }
 
-.logo {
+.navigetion__logo {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -272,28 +264,32 @@ body {
   color: #000000;
 }
 
-.logo-acent {
+.navigetion__acent {
   color: var(--acent-color--);
 }
 
-.logo {
+.navigetion__logo {
   display: flex;
   margin-right: 93px;
   align-items: center;
 }
 
-.heder-nav {
+.navigetion {
   display: flex;
   align-items: center;
 }
 
-.header-list {
+.navigetion__list {
   display: flex;
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.navigetion__list:focus, .navigetion__list:hover {
+  color: var(--acent-color--);
+  cursor: pointer;
+}
 
-.header-link {
+.connect {
   display: flex;
   margin-left: auto;
   align-items: center;
@@ -306,11 +302,11 @@ body {
   align-items: center;
 }
 
-.header-item:not(:last-child) {
+.navigetion__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-list {
+.navigetion__list {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -318,7 +314,7 @@ body {
   color: var(--first-title-color--);
 }
 
-.header-link {
+.connect {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -326,15 +322,14 @@ body {
   letter-spacing: 0.02em;
   color: #757575;
 }
+.connect :focus, .connect :hover {
+  color: var(--acent-color--);
+  cursor: pointer;
+}
 
 .active {
   position: relative;
 }
-
-.current {
-  color: var(--acent-color--);
-}
-
 .active::after {
   position: absolute;
   content: "";
@@ -346,13 +341,17 @@ body {
   bottom: -28px;
 }
 
+.current {
+  color: var(--acent-color--);
+}
+
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid rgb(236, 236, 236);
 }
 
-.header-link-contact {
+.connect__contact {
   display: flex;
   margin-left: auto;
   align-items: center;
@@ -364,21 +363,9 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-icon {
+.connect__icon {
   fill: currentColor;
   margin-right: 10px;
-}
-
-.header-list:focus,
-.header-list:hover {
-  color: var(--acent-color--);
-  cursor: pointer;
-}
-
-.header-link :focus,
-.header-link :hover {
-  color: var(--acent-color--);
-  cursor: pointer;
 }
 
 .hero {
@@ -459,13 +446,13 @@ body {
   padding-bottom: 94px;
 }
 
-.work-item {
+.work__item {
   display: flex;
   gap: 30px;
   width: 1170px;
 }
 
-.work-title {
+.work__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1666666667;
@@ -473,6 +460,29 @@ body {
   letter-spacing: 0.03em;
   color: var(--first-title-color--);
   margin-bottom: 50px;
+}
+
+.work__box {
+  position: relative;
+}
+
+.work__text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 70px;
+  width: 100%;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .comand {
@@ -485,8 +495,8 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1666666667;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
   color: var(--first-title-color--);
   margin-bottom: 50px;
 }
@@ -495,8 +505,8 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.1875;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
   color: var(--first-title-color--);
   margin-bottom: 10px;
 }
@@ -540,19 +550,15 @@ body {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.comand-soc-link:focus, .comand-soc-link:hover {
+  background-color: var(--acent-color--);
+}
 
 .comand-soc-icon {
   fill: #AFB1B8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.comand-soc-link:focus,
-.comand-soc-link:hover {
-  background-color: var(--acent-color--);
-}
-
-.comand-soc-link:focus,
-.comand-soc-link:hover .comand-soc-icon {
+.comand-soc-icon .comand-soc-link:focus, .comand-soc-link:hover .comand-soc-icon {
   fill: #fff;
 }
 
@@ -565,8 +571,8 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1666666667;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
   color: var(--first-title-color--);
   margin-bottom: 50px;
 }
@@ -588,21 +594,13 @@ body {
   color: rgb(175, 177, 184);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.client-icon {
-  fill: currentColor;
-}
-
-.client-logo-link:focus,
-.client-logo-link:hover {
+.client-logo-link:focus, .client-logo-link:hover {
   color: rgb(33, 150, 243);
   border-color: var(--acent-color--);
 }
 
-.footer-link :focus,
-.footer-link :hover {
-  color: var(--acent-color--);
-  cursor: pointer;
+.client-icon {
+  fill: currentColor;
 }
 
 .footer {
@@ -611,12 +609,12 @@ body {
   padding-bottom: 60px;
 }
 
-.logo-footer {
+.footer__logo {
   display: flex;
   margin-bottom: 20px;
 }
 
-.logo-footer {
+.footer__logo {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -626,7 +624,11 @@ body {
   color: var(--second-btn-color--);
 }
 
-.footer-link {
+.footer__logo-acent {
+  color: var(--acent-color--);
+}
+
+.footer__link {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -635,8 +637,12 @@ body {
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.footer__link :focus, .footer__link :hover {
+  color: var(--acent-color--);
+  cursor: pointer;
+}
 
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -644,7 +650,6 @@ body {
   display: flex;
 }
 
-/*---join--*/
 .join {
   display: flex;
   flex-wrap: wrap;
@@ -654,21 +659,16 @@ body {
   margin-left: 70px;
 }
 
-.join-soc {
+.join__soc {
   display: flex;
   gap: 10px;
 }
 
-.join-soc-link:focus,
-.join-soc-link:hover {
-  background-color: var(--acent-color--);
-}
-
-.join-soc-icon {
+.join__soc-icon {
   fill: #FFFFFF;
 }
 
-.join-soc-link {
+.join__soc-link {
   background-color: rgba(255, 255, 255, 0.1);
   width: 44px;
   height: 44px;
@@ -678,8 +678,11 @@ body {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.join__soc-link:focus, .join__soc-link:hover {
+  background-color: var(--acent-color--);
+}
 
-.join-title {
+.join__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -698,7 +701,7 @@ body {
   margin-left: 93px;
 }
 
-.send-title {
+.send__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
@@ -708,13 +711,13 @@ body {
   margin-bottom: 20px;
 }
 
-.send-imp {
+.send__imp {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
 }
 
-.send-email {
+.send__email {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -724,8 +727,7 @@ body {
   margin-right: 12px;
   padding-left: 10px;
 }
-
-.send-email::placeholder {
+.send__email::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -736,7 +738,7 @@ body {
   padding: 16px;
 }
 
-.btn-send {
+.send__btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -757,19 +759,19 @@ body {
   justify-content: center;
 }
 
-.send-svg {
+.send__svg {
   fill: var(--second-btn-color--);
   margin-left: 10px;
 }
 
-.btn-item {
+.portfolio__btn-item {
   display: flex;
   gap: 8px;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.list-btn {
+.portfolio__btn-list {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
@@ -783,15 +785,13 @@ body {
   padding: 6px 22px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.list-btn:hover,
-.list-btn:focus {
+.portfolio__btn-list:hover, .portfolio__btn-list:focus {
   color: var(--second-btn-color--);
   background-color: var(--acent-color--);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-title {
+.portfolio__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -800,7 +800,7 @@ body {
   margin-bottom: 4px;
 }
 
-.portfolio-text {
+.portfolio__text {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.03em;
@@ -812,48 +812,25 @@ body {
   padding-bottom: 94px;
 }
 
-.portfolio-item {
+.portfolio__item {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.portfolio-about {
+.portfolio__about {
   padding: 20px 24px;
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
 }
 
-.portfolio-top-wrap {
+.portfolio__top-wrap {
   position: relative;
   overflow: hidden;
 }
 
-.work-box {
-  position: relative;
-}
-
-.work-text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 70px;
-  width: 100%;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  background-color: rgba(47, 48, 58, 0.8);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.portfolio-top-text {
+.portfolio__top-text {
   position: absolute;
   top: 0;
   left: 0;
@@ -869,18 +846,14 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
 }
-
-.portfolio-link:focus,
-.portfolio-link:hover .portfolio-top-text {
+.portfolio__top-text .portfolio__link:focus, .portfolio__link:hover .portfolio__top-text {
   transform: translateY(0%);
 }
 
-.portfolio-link {
+.portfolio__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.portfolio-link:hover,
-.portfolio-link:focus {
+.portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }/*# sourceMappingURL=main.css.map */
