--- a/sass/layouts/_comand.scss
+++ b/sass/layouts/_comand.scss
@@ -5,21 +5,23 @@
 }
 
 .comand-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42/36);
+    @include font(700, 36, 42, 0.03em);
+    // font-weight: 700;
+    // font-size: 36px;
+    // line-height: calc(42/36);
     text-align: center;
-    letter-spacing: 0.03em;
+    // letter-spacing: 0.03em;
     color: var(--first-title-color--);
     margin-bottom: 50px;
 }
 
 .comand-subtitle {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: calc(19/16);
+    @include font(500, 16, 19, 0.03em);
+    // font-weight: 500;
+    // font-size: 16px;
+    // line-height: calc(19/16);
     text-align: center;
-    letter-spacing: 0.03em;
+    // letter-spacing: 0.03em;
     color: var(--first-title-color--);
     margin-bottom: 10px;
 }
@@ -64,20 +66,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+        &:hover {
+            background-color: var(--acent-color--);
+        }
 }
 
 .comand-soc-icon {
     fill: #AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .comand-soc-link:focus,
+        .comand-soc-link:hover & {
+            fill: #fff;
+        }
 }
 
-.comand-soc-link:focus,
-.comand-soc-link:hover {
-    background-color: var(--acent-color--);
-}
 
-.comand-soc-link:focus,
-.comand-soc-link:hover .comand-soc-icon {
-    fill: #fff;
-}
+
