--- a/sass/layouts/_content.scss
+++ b/sass/layouts/_content.scss
@@ -4,10 +4,11 @@
 }
 
 .content-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16/14);
-    letter-spacing: 0.03em;
+    @include font(700, 14, 16,0.03em);
+        // font-weight: 700;
+        // font-size: 14px;
+        // line-height: calc(16/14);
+        // letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--first-title-color--);
     margin-bottom: 10px;
