--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,8 +1,4 @@
-.footer-link :focus,
-.footer-link :hover {
-    color: var(--acent-color--);
-    cursor: pointer;
-}
+
 
 .footer {
     background-color: #2F303A;
@@ -10,12 +6,12 @@
     padding-bottom: 60px;
 }
 
-.logo-footer {
+.footer__logo {
     display: flex;
     margin-bottom: 20px;
 }
 
-.logo-footer {
+.footer__logo {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -25,10 +21,11 @@
     color: var(--second-btn-color--);
 }
 
+.footer__logo-acent {
+    color: var(--acent-color--)
+}
 
-
-
-.footer-link {
+.footer__link {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -36,133 +33,17 @@
     letter-spacing: 0.02em;
     color: #757575;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    & :focus,
+        & :hover {
+            color: var(--acent-color--);
+            cursor: pointer;
+        }
 }
 
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
     margin-bottom: 9px;
 }
 
 .footer .conteiner {
     display: flex;
-}
-
-/*---join--*/
-.join {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: baseline;
-    justify-content: center;
-    margin-left: 70px;
-}
-
-.join-soc {
-    display: flex;
-    gap: 10px;
-}
-
-.join-soc-link:focus,
-.join-soc-link:hover {
-    background-color: var(--acent-color--);
-}
-
-.join-soc-icon {
-    fill: #FFFFFF;
-}
-
-.join-soc-link {
-    background-color: rgba(255, 255, 255, 0.1);
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.join-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    margin-bottom: 20px;
-}
-
-.send {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: baseline;
-    justify-content: center;
-    margin-left: 93px;
-}
-
-.send-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    margin-bottom: 20px;
-}
-
-.send-imp {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-
-}
-
-.send-email {
-    width: 358px;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    background-color: transparent;
-    color: #FFFFFF;
-    margin-right: 12px;
-    padding-left: 10px;
-}
-
-.send-email::placeholder {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: calc(20 / 16);
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    padding: 16px;
-}
-
-.btn-send {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30/16);
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--second-btn-color--);
-    background-color: #2196F3;
-    display: block;
-    margin: 0 auto;
-    border: 0px;
-    cursor: pointer;
-    width: 200px;
-    height: 50px;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.send-svg {
-    fill: var(--second-btn-color--);
-    margin-left: 10px;
-
 }
