--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,11 +1,11 @@
-.btn-item {
+.portfolio__btn-item {
     display: flex;
     gap: 8px;
     justify-content: center;
     margin-bottom: 50px;
 }
 
-.list-btn {
+.portfolio__btn-list {
     font-weight: 500;
     font-size: 16px;
     line-height: calc(26/16);
@@ -20,18 +20,19 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+            &:focus {
+                color: var(--second-btn-color--);
+                background-color: var(--acent-color--);
+                box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+                    0px 1px 2px rgba(0, 0, 0, 0.08),
+                    0px 2px 2px rgba(0, 0, 0, 0.12);
+            }
 }
 
-.list-btn:hover,
-.list-btn:focus {
-    color: var(--second-btn-color--);
-    background-color: var(--acent-color--);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
 
-.portfolio-title {
+
+.portfolio__title {
     font-weight: 700;
     font-size: 18px;
     line-height: calc(36/18);
@@ -40,7 +41,7 @@
     margin-bottom: 4px;
 }
 
-.portfolio-text {
+.portfolio__text {
     font-size: 16px;
     line-height: calc(30/16);
     letter-spacing: 0.03em;
@@ -52,48 +53,27 @@
     padding-bottom: 94px;
 }
 
-.portfolio-item {
+.portfolio__item {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
-.portfolio-about {
+.portfolio__about {
     padding: 20px 24px;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
 }
 
-.portfolio-top-wrap {
+.portfolio__top-wrap {
     position: relative;
     overflow: hidden;
 }
 
-.work-box {
-    position: relative;
-}
 
-.work-text {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 70px;
-    width: 100%;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    background-color: rgba(47, 48, 58, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.portfolio-top-text {
+.portfolio__top-text {
     position: absolute;
     top: 0;
     left: 0;
@@ -108,21 +88,22 @@
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: auto;
+    .portfolio__link:focus,
+        .portfolio__link:hover & {
+            transform: translateY(0%);
+        }
 }
 
-.portfolio-link:focus,
-.portfolio-link:hover .portfolio-top-text {
-    transform: translateY(0%);
-}
 
-.portfolio-link {
+
+.portfolio__link {
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+        &:focus {
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+                0px 4px 4px rgba(0, 0, 0, 0.06),
+                1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
