--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import'./base/reset';
 @import'./utils/vars';
+@import'./utils/mixsin';
 @import'./components/conteiner';
 @import'./components/beckdrop';
 @import'./components/modal';
@@ -11,4 +12,6 @@
 @import'./layouts/comand';
 @import'./layouts/client';
 @import'./layouts/footer';
+@import'./layouts/join';
+@import'./layouts/send';
 @import'./layouts/portfolio';
